# trading_strategies

./: .gitignore  Dockerfile  Jenkinsfile  README.md  amd_strat.py  backtest_strategies.ipynb  docker-compose.yml  pyproject.toml
src/: config.py  main.py  strategy.py  telegram_notify.py
