[project]
name = "alpaca_trading_bot"
version = "0.1.0"
description = "Ein Trading-Bot für Alpaca mit Rolling Regression Strategie und Hebel"
authors = [
    { name = "Meric Kaynak", email = "mmk23.business@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Haupt-Abhängigkeiten
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "yfinance>=0.2.26",
    "alpaca-py>=5.0.0",
    "toml>=0.10.2"
]

[tool.poetry.scripts]
# Optional: Ein Konsolenbefehl zum Starten deines Bots
trading-bot = "main:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
